objects/Transaction_Export_Settings__mdt.object
<CustomObject>
    <description>Finance Export: This defines a transaction export. It defines which object should be grouped and how records should be grouped</description>
    <fields>
        <fullName>Additional_Filter__c</fullName>
        <description>This is part of a SOQL where clause that will always be used with a selection i.e. IsClosed=True</description>
        <inlineHelpText>This is part of a SOQL where clause that will always be used with a selection i.e. IsClosed=True</inlineHelpText>
        <label>Additional Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of this process</description>
        <inlineHelpText>A description of this process</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escape_String__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this is checked then any commas and quotes will be escaped when the export file is created. Uncheck this if the export row is being built in formulas</description>
        <inlineHelpText>If this is checked then any commas and quotes will be escaped when the export file is created. Uncheck this if the export row is being built in formulas</inlineHelpText>
        <label>Escape String</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Fields__c</fullName>
        <description>This is a comma delimited list of the fields that will be written out from the summary object to the file for each detail row</description>
        <inlineHelpText>This is a comma delimited list of the fields that will be written out from the summary object to the file for each detail row</inlineHelpText>
        <label>Export Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Export_File_Header_Row__c</fullName>
        <description>This is the header row that will be used in the CSV export file</description>
        <inlineHelpText>This is the header row that will be used in the CSV export file</inlineHelpText>
        <label>Export File Header Row</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_File_Name_Extension__c</fullName>
        <defaultValue>&quot;txt&quot;</defaultValue>
        <description>This is the file extension to be used for the file i.e. csv, txt etc (do not include the full stop)</description>
        <inlineHelpText>This is the file extension to be used for the file i.e. csv, txt etc (do not include the full stop)</inlineHelpText>
        <label>Export File Name Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_File_Name_Pattern__c</fullName>
        <description>This will be a text value that will allow a few values to be replaced i.e. SRMEXPORT_{0}_{1}.csv where 0 could refer to the batch number and 1 the date.</description>
        <inlineHelpText>This will be a text value that will allow a few values to be replaced i.e. SRMEXPORT_{0}_{1}.csv where 0 could refer to the batch number and 1 the date.</inlineHelpText>
        <label>Export File Name Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Fields__c</fullName>
        <description>This is a semicolon separated list of API field names on the transaction object</description>
        <inlineHelpText>This is a semicolon separated list of API field names on the transaction object</inlineHelpText>
        <label>Group Field(s)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if this is just set up for tests</description>
        <inlineHelpText>Select this if it is a test export and not to be used for production</inlineHelpText>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_Date_Field__c</fullName>
        <description>The API name of a date field on the source transaction record that is updated when this is summarised</description>
        <inlineHelpText>The API name of a date field on the source transaction record that is updated when this is summarised</inlineHelpText>
        <label>Processed Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Status_Field__c</fullName>
        <description>This is the name of the field on the transaction object that represents the export status</description>
        <inlineHelpText>This is the name of the field on the transaction object that represents the export status</inlineHelpText>
        <label>Processed Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Status_Value__c</fullName>
        <description>This is the status value once the transactions have been summarised. This can be a string or the name of a field on the transaction (NB If a field is used then it must be a custom field and include &apos;__c&apos;)</description>
        <inlineHelpText>This is the status value once the transactions have been summarised. This can be a string or the name of a field on the transaction (NB If a field is used then it must be a custom field and include &apos;__c&apos;)</inlineHelpText>
        <label>Processed Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollback_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>This is the batch size used for the rollback process. This is the number of summary records that are processed and each of these links to multiple transactions. The lower the number the slower the process, but it can help avoid limits</description>
        <inlineHelpText>This is the batch size used for the rollback process. This is the number of summary records that are processed and each of these links to multiple transactions. The lower the number the slower the process, but it can help avoid limits</inlineHelpText>
        <label>Rollback Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selection_1_Ask_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to determine whether the field specified should be used for the export selection</description>
        <inlineHelpText>This is used to determine whether the field specified should be used for the export selection</inlineHelpText>
        <label>Selection 1 Ask User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection_1_Default_Value__c</fullName>
        <description>This is the default value that is used for the first selection field</description>
        <inlineHelpText>This is the default value that is used for the first selection field</inlineHelpText>
        <label>Selection 1 Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_1_Field_Name__c</fullName>
        <description>The API field name of a field on the transaction object that could be used to filter the selection i.e. gcqs_Payment_Method__c</description>
        <inlineHelpText>The API field name of a field on the transaction object that could be used to filter the selection i.e. gcqs_Payment_Method__c</inlineHelpText>
        <label>Selection 1 Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_2_Ask_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines whether the second selection field should be used for the transaction selection</description>
        <inlineHelpText>This determines whether the second selection field should be used for the transaction selection</inlineHelpText>
        <label>Selection 2 Ask User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection_2_Default_Value__c</fullName>
        <description>This is the default value that is used for the second selection</description>
        <inlineHelpText>This is the default value that is used for the second selection</inlineHelpText>
        <label>Selection 2 Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_2_Field_Name__c</fullName>
        <description>The API name of the second field that could be used for selections</description>
        <inlineHelpText>The API name of the second field that could be used for selection</inlineHelpText>
        <label>Selection 2 Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Rollback_Value__c</fullName>
        <description>If the process is rolled back then this is the value that the status should be set to. This can be a string or the name of a field on the transaction (NB If a field is used then it must be a custom field and include &apos;__c&apos;)</description>
        <inlineHelpText>If the process is rolled back then this is the value that the status should be set to. This can be a string or the name of a field on the transaction (NB If a field is used then it must be a custom field and include &apos;__c&apos;)</inlineHelpText>
        <label>Status Rollback Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group_Export_String_Field_Name__c</fullName>
        <description>This is the API name of a field that contains the string that will be exported for each sub-group. If this is left blank then the value in the Sub Group Field will be used</description>
        <inlineHelpText>This is the API name of a field that contains the string that will be exported for each sub-group (i.e a CSV string). If this is left blank then the value in the Sub Group Field will be used</inlineHelpText>
        <label>Sub Group Export String Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group_Field_Name__c</fullName>
        <description>This is the API name of a field on the summary record that will act as a sub heading in the export file.</description>
        <inlineHelpText>This is the API name of a field on the summary record that will act as a sub heading in the export file.</inlineHelpText>
        <label>Sub Group Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>This is the batch size used for the summary process. This is the number of transaction records that are processed. The lower the number the slower the process, but it can help avoid limits.</description>
        <inlineHelpText>This is the batch size used for the summary process. This is the number of transaction records that are processed. The lower the number the slower the process, but it can help avoid limits.</inlineHelpText>
        <label>Summary Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Field__c</fullName>
        <description>The API name of the date field that will be used to optionally select transaction records i.e. CloseDate</description>
        <inlineHelpText>The API name of the date field that will be used to optionally select transaction records i.e. CloseDate</inlineHelpText>
        <label>Transaction Date Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Object_Name__c</fullName>
        <description>The api name of the object that will be summarised</description>
        <inlineHelpText>The api name of the object that will be summarised i.e. Opportunity</inlineHelpText>
        <label>Transaction Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Summary_Field_Name__c</fullName>
        <description>This is the API name(s) of lookup field(s) on the transaction object that will be updated with a link to the summarised object</description>
        <inlineHelpText>This is the API name(s) of lookup field(s) on the transaction object that will be updated with a link to the summarised object . If more than one group is specified, then separate this list with a comma.</inlineHelpText>
        <label>Transaction Summary Field Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Export Settings</label>
    <pluralLabel>Transaction Export Settings</pluralLabel>
</CustomObject>